--- a/savystyle.css
+++ b/savystyle.css
@@ -10,14 +10,21 @@ h1 { text-align: center;
     font-family: "Times New Roman", Times, serif;
     color:  #200b50;
     font-size: 40px;
-    text-decoration: bold;
+    text-decoration: bold, underline;
+}
+
+h2 { text-align: left;
+    font-family: "Times New Roman", Times, serif;
+    color:  #200b50;
+    font-size: 15px;
+    /* text-decoration: bold; */
 }
 
 td {
 	color: #99CCFF;
 	list-style-position: outside;
 	font-family:"Times New Roman", Times, serif;
-	font-size: 11px;
+	font-size: 12px;
 	}
 
 a:link {
