--- a/savystyle.css
+++ b/savystyle.css
@@ -16,15 +16,21 @@ h1 { text-align: center;
 h2 { text-align: left;
     font-family: "Times New Roman", Times, serif;
     color:  #200b50;
-    font-size: 15px;
-    /* text-decoration: bold; */
+    font-size: 25px;
+
+}
+
+h3 { text-align: left;
+    font-family: "Times New Roman", Times, serif;
+    color:  #200b50;
+    font-size: 20px;
 }
 
 td {
 	color: #99CCFF;
 	list-style-position: outside;
 	font-family:"Times New Roman", Times, serif;
-	font-size: 12px;
+	font-size: 18px;
 	}
 
 a:link {
