--- a/savystyle.css
+++ b/savystyle.css
@@ -6,7 +6,9 @@ body {margin-left:10%;
     -webkit-text-size-adjust: 100%;
     }
 
-h1 { text-align: center;
+h1 { 
+    /* text-align: center; */
+    text-align: justify;
     font-family: "Times New Roman", Times, serif;
     color:  #200b50;
     font-size: 40px;
@@ -15,34 +17,34 @@ h1 { text-align: center;
 
 
 
-h2 { text-align: left;
+h2 {text-align: justify;
     font-family: "Times New Roman", Times, serif;
     color:  #200b50;
     font-size: 28px;
 
 }
 
-h3 { text-align: left;
+h3 { text-align: justify;
     font-family: "Times New Roman", Times, serif;
     color:  #200b50;
     font-size: 20px;
 }
 
 
-h4 { text-align: center;
+h4 { text-align: justify;
     font-family: "Times New Roman", Times, serif;
     color:  #200b50;
     font-size: 30px;
     text-decoration: bold;
 }
 
-h5 { text-align: left;
+h5 { text-align: justify;
     font-family: "Times New Roman", Times, serif;
     color:  #200b50;
     font-size: 18px;
 }
 
-h6 { text-align: start;
+h6 { text-align: justify;
     font-family: "Times New Roman", Times, serif;
     color:  #200b50;
     font-size: 18px;
