--- a/savystyle.css
+++ b/savystyle.css
@@ -38,13 +38,7 @@ h4 { text-align: justify;
     text-decoration: bold;
 }
 
-h5 { text-align: justify;
-    font-family: "Times New Roman", Times, serif;
-    color:  #200b50;
-    font-size: 18px;
-}
-
-h6 { text-align: justify;
+h5 { text-align: left;
     font-family: "Times New Roman", Times, serif;
     color:  #200b50;
     font-size: 18px;
@@ -68,12 +62,12 @@ a:link {
     text-decoration: none;
     font-family: "Times New Roman", Times, serif;
     color:  #1a1a1a;
-    font-size: 12px;
+    font-size: inherit;
   }
 
 a:hover {
     text-decoration:none;
-	  font-size: 12px;
+	  font-size: inherit;
     color: #00279b;
 }
 
@@ -88,6 +82,13 @@ p{
 
 /* Class */
 
-.title{
-    
-}
+.bodytxt{
+    color: #000000;
+	letter-spacing: 0.1em;
+	/* line-height: 130%; */
+	font-family: helvetica;
+	font-size: 12px;
+	vertical-align: top;
+	position: inherit;
+	/* font-weight: lighter; */
+	}
