change to futura?

--- a/savystyle.css
+++ b/savystyle.css
@@ -86,7 +86,7 @@ p{
     color: #000000;
 	letter-spacing: 0.1em;
 	/* line-height: 130%; */
-	font-family: helvetica;
+	font-family: Futura,Trebuchet MS,Arial,sans-serif; 
 	font-size: 12px;
 	vertical-align: top;
 	position: inherit;
