--- a/savystyle.css
+++ b/savystyle.css
@@ -9,7 +9,7 @@ body {margin-left:10%;
 h1 { 
     /* text-align: center; */
     text-align: justify;
-    font-family: "Times New Roman", Times, serif;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif; 
     color:  #200b50;
     font-size: 40px;
     text-decoration: bold;
@@ -18,28 +18,28 @@ h1 {
 
 
 h2 {text-align: justify;
-    font-family: "Times New Roman", Times, serif;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif; 
     color:  #200b50;
     font-size: 28px;
 
 }
 
 h3 { text-align: justify;
-    font-family: "Times New Roman", Times, serif;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif; 
     color:  #200b50;
     font-size: 20px;
 }
 
 
 h4 { text-align: justify;
-    font-family: "Times New Roman", Times, serif;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif; 
     color:  #200b50;
     font-size: 30px;
     text-decoration: bold;
 }
 
 h5 { text-align: left;
-    font-family: "Times New Roman", Times, serif;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif; 
     color:  #200b50;
     font-size: 18px;
 }
@@ -47,20 +47,20 @@ h5 { text-align: left;
 td {
 	color: #021429;
 	list-style-position: outside;
-	font-family:"Times New Roman", Times, serif;
+	font-family: Futura,Trebuchet MS,Arial,sans-serif; 
 	font-size: 15px;
 	}
 
 ct {
     color: #021429;
     list-style-position: outside;
-    font-family:"Times New Roman", Times, serif;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif; ;
     font-size: 13px;
     }
 
 a:link {
     text-decoration: none;
-    font-family: "Times New Roman", Times, serif;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif; ;
     color:  #1a1a1a;
     font-size: inherit;
   }
