--- a/savystyle.css
+++ b/savystyle.css
@@ -18,28 +18,28 @@ h1 {
 
 
 h2 {text-align: justify;
-    font-family: Futura,Trebuchet MS,Arial,sans-serif; 
+    font-family: Helvetica, sans-serif; 
     color:  #200b50;
     font-size: 28px;
 
 }
 
 h3 { text-align: justify;
-    font-family: Futura,Trebuchet MS,Arial,sans-serif; 
+    font-family: Helvetica, sans-serif; 
     color:  #200b50;
     font-size: 20px;
 }
 
 
 h4 { text-align: justify;
-    font-family: Futura,Trebuchet MS,Arial,sans-serif; 
+    font-family: Helvetica, sans-serif; 
     color:  #200b50;
     font-size: 30px;
     text-decoration: bold;
 }
 
 h5 { text-align: left;
-    font-family: Futura,Trebuchet MS,Arial,sans-serif; 
+    font-family: Helvetica, sans-serif; 
     color:  #200b50;
     font-size: 18px;
 }
@@ -47,7 +47,7 @@ h5 { text-align: left;
 td {
 	color: #021429;
 	list-style-position: outside;
-	font-family: Futura,Trebuchet MS,Arial,sans-serif; 
+	font-family: Helvetica, sans-serif; 
 	font-size: 15px;
 	}
 
@@ -60,7 +60,7 @@ ct {
 
 a:link {
     text-decoration: none;
-    font-family: Futura,Trebuchet MS,Arial,sans-serif; ;
+    font-family: Helvetica, sans-serif;
     color:  #1a1a1a;
     font-size: inherit;
   }
