css file from futura to helve

--- a/savystyle.css
+++ b/savystyle.css
@@ -89,7 +89,7 @@ p{
 
 .bodytxt{
     	color: #000000;
-	font-family: Futura,Trebuchet MS,Arial,sans-serif; 
+	font-family: Helvetica, sans-serif;
 	font-size: inherit;
 	vertical-align: top;
 	position: inherit;
