--- a/savystyle.css
+++ b/savystyle.css
@@ -105,3 +105,15 @@ p{
     text-align:center;
     display:block;
   }
+
+/* .button {
+    border: black;
+    color: white;
+    padding: 15px 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 10px 2px;
+    cursor: pointer;
+} */
